# teaching_rag_prod

./: .gitignore  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: main.py
clients/: embeddings.py  llm.py
ingestion/: cleaning.py  ingest.py
models/: QueryRequest.py  QueryResponse.py
retrieval/: retriever.py
samasocial_backend/api/: main.py
samasocial_backend/retrieval/: retriever.py
samasocial_frontend/: index.html
utils/: retry_calling.py
vector_database/: fassi_index.py
