[project]
name = "azure-based-rag-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi==0.115.0",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-openai==0.2.9",
    "langchain-qdrant==0.2.0",
    "pip>=26.1.2",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.32",
    "qdrant-client==1.12.0",
    "uvicorn==0.30.0",
]
