[project]
name = "azure-based-rag-model"
version = "0.1.0"
description = "RAG pipeline with Azure OpenAI and Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-openai==0.2.9",
    "langchain-qdrant==0.2.0",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.32",
    "qdrant-client==1.12.0",
]